--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="form.css" />
-    <title>Oriental Essence Enrolment Form</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="formbold-main-wrapper">
@@ -25,8 +25,9 @@
                     type="text"
                     name="firstname"
                     id="firstname"
-                    placeholder="John"
+                    placeholder=""
                     class="formbold-form-input"
+                    required
                     />
                     <label for="firstname" class="formbold-form-label"> First name </label>
                 </div>
@@ -35,8 +36,9 @@
                     type="text"
                     name="lastname"
                     id="lastname"
-                    placeholder="Chow"
+                    placeholder=""
                     class="formbold-form-input"
+                    required
                     />
                     <label for="lastname" class="formbold-form-label"> Last name </label>
                 </div>
@@ -48,8 +50,9 @@
                     type="email"
                     name="email"
                     id="email"
-                    placeholder="food@gmail.com"
+                    placeholder=""
                     class="formbold-form-input"
+                    required
                     />
                     <label for="email" class="formbold-form-label"> Mail </label>
                 </div>
@@ -58,8 +61,9 @@
                     type="text"
                     name="phone"
                     id="phone"
-                    placeholder="6123 2345"
+                    placeholder=""
                     class="formbold-form-input"
+                    required
                     />
                     <label for="phone" class="formbold-form-label"> Phone </label>
                 </div>
