--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="form.css" />
-    <title>Document</title>
+    <title>Orientak Essence Enrolment Form</title>
 </head>
 <body>
     <div class="formbold-main-wrapper">
@@ -25,7 +25,7 @@
                     type="text"
                     name="firstname"
                     id="firstname"
-                    placeholder=""
+                    placeholder="John"
                     class="formbold-form-input"
                     required
                     />
@@ -36,7 +36,7 @@
                     type="text"
                     name="lastname"
                     id="lastname"
-                    placeholder=""
+                    placeholder="Chow"
                     class="formbold-form-input"
                     required
                     />
@@ -50,7 +50,7 @@
                     type="email"
                     name="email"
                     id="email"
-                    placeholder=""
+                    placeholder="john@gmail.com"
                     class="formbold-form-input"
                     required
                     />
@@ -61,7 +61,7 @@
                     type="text"
                     name="phone"
                     id="phone"
-                    placeholder=""
+                    placeholder="6123 1234"
                     class="formbold-form-input"
                     required
                     />
