--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Oriental Essence Enrolment Form" content="">
     <link rel="stylesheet" href="form.css" />
-    <title>Orientak Essence Enrolment Form</title>
+    <title>Oriental Essence Enrolment Form</title>
 </head>
 <body>
     <div class="formbold-main-wrapper">
