--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Oriental Essence Enrolment Form" content="">
+
+    <meta property="og:title" content="Oriental Essence" />
+    <meta property="og:description" content="Enrolment Form" />
+    
     <link rel="stylesheet" href="form.css" />
     <title>Oriental Essence Enrolment Form</title>
 </head>
